--- a/index.html
+++ b/index.html
@@ -2,24 +2,20 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>烟花模拟器 v2</title>
+    <title>fireworks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#000000">
-    <link rel="shortcut icon" type="image/png" href="assets/image/firework-burst-icon-v2.png">
-    <link rel="icon" type="image/png" href="assets/image/firework-burst-icon-v2.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/image/firework-burst-icon-v2.png">
+    <!-- <link rel="apple-touch-icon-precomposed" href="assets/image/firework-burst-icon-v2.png"> -->
     <meta name="msapplication-TileColor" content="#000000">
-    <meta name="msapplication-TileImage" content="assets/image/firework-burst-icon-v2.png">
-    <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <!-- SVG Spritesheet -->
-<div style="height: 0; width: 0; position: absolute; visibility: hidden;">
+<!-- <div style="height: 0; width: 0; position: absolute; visibility: hidden;">
     <svg xmlns="http://www.w3.org/2000/svg">
         <symbol id="icon-play" viewBox="0 0 24 24">
             <path d="M8 5v14l11-7z"/>
@@ -40,13 +36,13 @@
             <path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"/>
         </symbol>
     </svg>
-</div>
+</div> -->
 
 <!-- App -->
 <div class="container">
     <div class="loading-init">
-        <div class="loading-init__header">加载中</div>
-        <div class="loading-init__status">正在装填烟花……</div>
+        <div class="loading-init__header"></div>
+        <div class="loading-init__status"></div>
     </div>
     <div class="stage-container remove">
         <div class="canvas-container">
@@ -70,7 +66,6 @@
                     <svg fill="white" width="24" height="24"><use href="#icon-close" xlink:href="#icon-close"></use></svg>
                 </div>
                 <div class="menu__header">设置</div>
-                <div class="menu__subheader">点按设置项名称以查看更多信息。</div>
                 <form>
                     <div class="form-option form-option--select">
                         <label class="shell-type-label">烟花类型</label>
@@ -113,19 +108,7 @@
                         <input class="long-exposure" type="checkbox" />
                     </div>
                 </form>
-                <div class="credits">
-                    Passionately built by <a href="https://cmiller.tech" target="_blank">Caleb Miller</a>.<br>
-                    Translated by <a href="https://github.com/troyxun" target="_blank">Troy</a>.
-                </div>
             </div>
-        </div>
-    </div>
-    <div class="help-modal">
-        <div class="help-modal__overlay"></div>
-        <div class="help-modal__dialog">
-            <div class="help-modal__header"></div>
-            <div class="help-modal__body"></div>
-            <button type="button" class="help-modal__close-btn">关闭</button>
         </div>
     </div>
 </div>
