--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
             <div class="btn pause-btn">
                 <svg fill="white" width="24" height="24"><use href="#icon-pause" xlink:href="#icon-pause"></use></svg>
             </div>
-            <div class="btn sound-btn">
-                <svg fill="white" width="24" height="24"><use href="#icon-sound-off" xlink:href="#icon-sound-off"></use></svg>
-            </div>
             <div class="btn settings-btn">
                 <svg fill="white" width="24" height="24"><use href="#icon-settings" xlink:href="#icon-settings"></use></svg>
+            </div>
+        </div>
+        <div class="c">
+            <div class="btn sound-btn">
+                <svg fill="white" width="24" height="24"><use href="#icon-sound-off" xlink:href="#icon-sound-off"></use></svg>
             </div>
         </div>
     </div>
